Prise de note du 28 mai

--- a/01_introduction.tex
+++ b/01_introduction.tex
@@ -1,72 +1,88 @@
+% !TeX root = droitUrbanisme.tex
 \chapter[Introduction]{Introduction générale au droit de l'urbanisme et de l'aménagement}
 
 	\section{Une police administrative spécialisée}
-		
+
 		Le droit de l’urbanisme n’est pas un droit contractuel, mais un \textbf{droit de police administrative}.
-		
-		Cela a plusieurs conséquences : 
-		-	Il ne se négocie pas. Nous avons quelques thématiques ou sous thématique en urbanisme ou aménagement l’utilisation de contrat. Mais généralement c’est du droit unilatéral CAD du droit de police
-		On ne peut pas aller négocier en conseil municipal ou avant un zonage du PLU
-		Pas de négociation du permis : ça ne veut pas dire ne pas échanger avec le service instructeur, communal ou intercommunal, pour que l’architecte ou le MO comprenne quel est la lecture de l’instructeur de tel ou tel prescription du PLU ou du CDU. L’échange informel est possible. Cela est acquis. En revanche à partir du moment où le dépôt officiel du PC a été réalisé, alors le processus administratif d’instruction est lancé avec des délais et une procédure réglementée.
+
+		%Cela a plusieurs conséquences :
+		\paragraph{Il ne se négocie pas.}
+		Nous avons quelques thématiques ou sous thématique en urbanisme ou aménagement l’utilisation de contrat. Mais généralement c’est du droit unilatéral \CAD du droit de police.
+
+		On ne peut pas aller négocier en conseil municipal ou avant un zonage du PLU.
+
+		\subparagraph{Pas de négociation du permis :}
+		 ça ne veut pas dire ne pas échanger avec le service instructeur, communal ou intercommunal, pour que l’architecte ou le \MO comprenne quel est la lecture de l’instructeur de tel ou tel prescription du PLU ou du CDU. L’échange informel est possible. Cela est acquis. En revanche à partir du moment où le dépôt officiel du PC a été réalisé, alors le processus administratif d’instruction est lancé avec des délais et une procédure réglementée.
+
 		On ne peut pas non plus sur une parcelle donnée, aller plaider ma cause si je dépasse par exemple la hauteur, cela ne se négocie pas. Les prescriptions doivent être respectées en conformité.
-		Je ne peux pas négocier le permis avec le service instructeur suite aux instructions particulières comme le SDIS (service départementale incendie sécurité)
-		C’est un processus unilatéral qui ne se contractualise pas
+		Je ne peux pas négocier le permis avec le service instructeur suite aux instructions particulières comme le SDIS (service départementale incendie sécurité).
+
+		C’est un processus unilatéral qui ne se contractualise pas.
+
 		Si un recours est introduit contre le PC, le requérant n’a pas facialement la possibilité d’aller négocier avec la ville.
-		Pas de négociation de zonage : dans le cadre d’un PLU je peux échanger avec les conseillers municipaux ou intercommunaux, avant le vote, en cours d’élaboration d’un PLU, mais une fois que le PLU est arrêté, voir approuvé (dernière délibération qui entérine le PLU), ce processus n’est pas négociable. Je peux juste m’exprimer en amont dans le cadre d’une concertation ou en aval au stade de l’enquête publique.
+
+		\subparagraph{Pas de négociation de zonage :}
+		dans le cadre d’un PLU je peux échanger avec les conseillers municipaux ou intercommunaux, avant le vote, en cours d’élaboration d’un PLU, mais une fois que le PLU est arrêté, voir approuvé (dernière délibération qui entérine le PLU), ce processus n’est pas négociable. Je peux juste m’exprimer en amont dans le cadre d’une concertation ou en aval au stade de l’enquête publique.
+
 		Pas de négociation possible donc en phase de planification
-		
-		Il y a en revanche quelques secteurs, quelques sous matière en urba et aménagement, où la négociation est possible au travers d’un contrat : 
-		
-		-	ZAC : zone d’aménagement concerté, concession d’aménagement. Au sein des ZAC il y a des traités de concessions, contrat administratif entre une collectivité locale et un aménageur appelé concessionnaire, ils négocient une convention administrative appelé traité de concession qui constitue la règle du jeu contractuelle durant les années pendant lesquelles l’opération de ZAC va être mise en œuvre
-		-	Le droit de la fiscalité de l’urbanisme : deux outils d’essence contractuelle : la convention de PUP (projet urbain partenarial) est un mode de financement d’équipement public souvent à partir de projet d’initiative privée, ce qui le distingue des opérations de ZAC qui sont d’initiative publique dans lesquelles, outre le traité de concession, il peut y avoir des conventions de participation (convention entre la commune concédant d’une opération d’aménagement et des propriétaires de terrains, ou les bénéficiaires de promesses consenties par ces propriétaires comme les promoteurs qui développerai en ZAC des terrains, pour lesquels il conviendrait préalablement à l’obtention du PC, de signer des conventions de participation.
-		Ici on détermine le montant du quantum à verser à la ville, voir à son aménageur, par le propriétaire ou le promoteur qui en ZAC développerait le terrain
-		C’est un droit de police car sanctions radicales. Exemple : 
-		-	PC valant division : chacun a sur sa parcelle une partie du permis commun, chacun est co-MO. Et chacun doit faire un petit immeuble mais certaines exécutions du PC ne sont pas conformes au plan. Avant même l’achèvement de l’immeuble, cette non-conformité si elle peut être décelée, elle constitue une infraction pénale, et le maire peut prendre un arrêté interruptif de travaux.
-		-	Une annexe qui est construite sur le fonds mitoyen sans PC sans autorisation : infraction pénale. Si le maire est inactif, le préfet peut intervenir et prendre un arrêté interruptif de chantier et demander la démolition de la construction immobilière
-		
-		(un PC fabrique une SDP surface de plancher)
-		
-		
+
+		Il y a en revanche quelques secteurs, quelques sous matière en urba et aménagement, où la négociation est possible au travers d’un contrat :
+		\begin{itemize}
+			\item \textbf{ZAC :} zone d’aménagement concerté, concession d’aménagement. Au sein des ZAC il y a des traités de concessions, contrat administratif entre une collectivité locale et un aménageur appelé concessionnaire, ils négocient une convention administrative appelé traité de concession qui constitue la règle du jeu contractuelle durant les années pendant lesquelles l’opération de ZAC va être mise en œuvre.
+
+			\item \textbf{Le droit de la fiscalité de l’urbanisme :} deux outils d’essence contractuelle : la convention de PUP (projet urbain partenarial) est un mode de financement d’équipement public souvent à partir de projet d’initiative privée, ce qui le distingue des opérations de ZAC qui sont d’initiative publique dans lesquelles, outre le traité de concession, il peut y avoir des conventions de participation (convention entre la commune concédant d’une opération d’aménagement et des propriétaires de terrains, ou les bénéficiaires de promesses consenties par ces propriétaires comme les promoteurs qui développerai en ZAC des terrains, pour lesquels il conviendrait préalablement à l’obtention du PC, de signer des conventions de participation.
+
+			Ici on détermine le montant du quantum à verser à la ville, voir à son aménageur, par le propriétaire ou le promoteur qui en ZAC développerait le terrain
+		\end{itemize}
+
+
+		\paragraph{C’est un droit de police car les sanctions sont radicales.}
+		Exemple :
+		\begin{itemize}
+			\item \textbf{PC valant division :} chacun a sur sa parcelle une partie du permis commun, chacun est co-MO. Et chacun doit faire un petit immeuble mais certaines exécutions du PC ne sont pas conformes au plan. Avant même l’achèvement de l’immeuble, cette non-conformité si elle peut être décelée, elle constitue une infraction pénale, et le maire peut prendre un arrêté interruptif de travaux.
+			\item \textbf{Une annexe qui est construite sur le fonds mitoyen sans PC sans autorisation :} infraction pénale. Si le maire est inactif, le préfet peut intervenir et prendre un arrêté interruptif de chantier et demander la démolition de la construction immobilière (un PC fabrique une SDP surface de plancher).
+		\end{itemize}
+
 	\section{Un droit décentralisé}
-	
+
 		Ce droit a une dimension intercommunale.
-		
+
 		Décentralisation ancienne, des lois de 1982 (décentralisation des CL) et 1983 (décentralisation de l’urbanisme)
 		-	Décentralisation dans l’élaboration la fabrication des PLU (avant les POS)
 		-	Décentralisation des instructions de constructions individuelles (autorisations administratives PC)
 		En 1985, décentralisation des compétences en matières d’aménagement des ZAC, donc décentralisées au CL.
-		
+
 		Ici, on rapproche le pouvoir décisionnaire des administrés. L’état sera sous surveillance démocratique des administrés qui sera renforcée avec une sanction électorale en fin de course, par les urnes de la part des administrés, c’était la vision et le concept avec la décentralisation.
-		
+
 		Il y a un risque de collusion, de dérive
-		
+
 		Autre conséquence de la décentralisation : transfert de la responsabilité administrative, on le voit sur le contentieux de la responsabilité. La décentralisation est la prise de responsabilité
-		Tout acte illégal d’une Collectivité publique, fait présumer sa responsabilité. En conséquence 3 exemples : 
+		Tout acte illégal d’une Collectivité publique, fait présumer sa responsabilité. En conséquence 3 exemples :
 		-	Maire délivre un PC après instruction. Il est attaqué et annulé par le juge administratif. Cet acte annulé est susceptible d’engager ma responsabilité de la commune par le pétitionnaire qui a engagé des honoraires d’architecte et de bureau d’étude
 		-	Un refus illégal. Annulation du refus par le juge. Le coût de la construction est désormais différent, responsabilité possible de la commune sur ce préjudice
 		-	Je dispose d’un terrain porte un zonage qui va réduire ou anéantir ma constructibilité. J’attaque le zonage concerné ou le PLU et je le fais annulé. Le précédent zonage redevient applicable, j’avais un acquéreur mais je ne l’ai plus, en théorie la responsabilité de la collectivité peut être recherchée
-		
+
 		Donc dans les années 80 les collectivités se sont retrouvées face à leur responsabilité. Donc question d’une éventuelle assurance. L’état n’était pas assuré mais les collectivités pour leur nouvelle compétence, certaines sont désormais assurées.
 		Paris n’est pas assuré*
-		
+
 		Sur l’intercommunalité : elle est intervenue progressivement, alors qu’elle n’était pas obligatoire =. Besoin de faire face à une technicité toujours grandissante en la matière
 		Donc les communes se sont regroupées de manière facultative dans un premier temps puis de manière obligatoire pour 3 blocs de compétence
 		-	Pour les documents d’urbanisme comme le PLU. Il y a les communautés de communes et les communautés d’agglomérations, et des communautés urbaines comme à LYON
 		Cela a des avantages pour la mutualisation des moyens, mais il y a des inconvénients. En cas de contestation du PLU sur les moyens de légalité externe, si j’arrive à mes fins cela fait tombé tout le PLU pour toutes les communes
-		
-		-	L’instruction des autorisations. Cela est sensible. Ce bloc va être découpé en plusieurs phases. Les maires de chaque commune veulent garder l’apposition de leur signature. Il va avoir une phase intercommunale avec l’instruction mais l’acte final sera municipal 
+
+		-	L’instruction des autorisations. Cela est sensible. Ce bloc va être découpé en plusieurs phases. Les maires de chaque commune veulent garder l’apposition de leur signature. Il va avoir une phase intercommunale avec l’instruction mais l’acte final sera municipal
 		La communauté de commune demande l’avis du maire sur le projet
 		Après tout le processus d’instruction c’est l’intercommunauté qui l’assume
 		Puis il y a une proposition faite au maire, soit acceptation du projet avec ou sans prescription technique. C’est formel mais pas opposable.
-		Si la compétence de signataire reste à la mairie, le maire reste libre 
+		Si la compétence de signataire reste à la mairie, le maire reste libre
 		Si tout le monde est en phase, préparation de l’arrêté
 		Le Maire  ne suit pas l’interco c’est la responsabilité du maire, si suit l’avis de l’interco alors c’est l’intercommunalité qui doit prendre la responsabilité
-		
-	
+
+
 	\section{Un droit instable}
-	
+
 		L'instabilité est due aux textes successifs et au contentieux local qui frappe les documents réglementaires.
-		
+
 		Il y a un texte transversal tous les 2 ans qui toilette code de la construction de l’environnement de la santé de l’urbanisme
 		Donc toujours grosse mise à jour avec ajout de textes nouveaux. Depuis notamment la loi SRU Solidarité et renouvellement urbain 2000 : on a changé les étiquettes SCOT et POS
 		Et depuis tous les 2-3 ans beaucoup de changement.
@@ -79,17 +95,17 @@
 		Ex : Droit de préemption anti vente à la découpe. La collectivité peut préempter quand propriétaire veut vendre à la découpe son immeuble.
 		La commune peut préempter pour des logements sociaux. Il y a quelques années deux préemptions pour deux appartements du même immeuble. Deux chambres du Tribunal statuent mais rendent des décisions différentes.
 		Donc instabilité du droit applicable
-		
-	
+
+
 	\section{Un droit multiple}
-	
+
 		Son caractère tient à la multiplicité des intervenant et s'exprime par des actes individuels et réglementaires.
-		
+
 		Par ses acteurs
 		L’état central, avec pilotage de grande opération
 		Etablissement public d’Aménagement : Ici, la ville gère son PLU et les autorisations individuelles mais la dimension aménagement est gérée par l’état.
 		L’état au niveau départementale, c’est une intervention ancienne, la présence du préfet a accompagné le processus de décentralisation, avec comme corolaire donc du contrôle de légalité a postériori, c’est la manière pour l’état de garder un contrôle a posteriori pour tous les actes décentralisés.
-		En 1992, il y avait des statistiques en urbanisme sur le pourcentage d’acte censuré par le préfet 0,072% de tous les actes des CT 
+		En 1992, il y avait des statistiques en urbanisme sur le pourcentage d’acte censuré par le préfet 0,072% de tous les actes des CT
 		Dernière émergence de l’état, c’est le préfet de région à qui il revient de recevoir les études d’impact qui accompagne soit les ZAC ou certains PC lourds au moins >10.000 m² de SDP.
 		Alors avis, pour savoir si ces éléments constitutifs d’un dossier de ZAC ou de permis ne sont pas complets.
 		Il y a aussi les OPF, les établissements publics fonciers. Il est parfois régional ou intercommunal. Ce sont des établissements publics avec une personnalité juridique à qui on donne un rôle de portage foncier CAD activité ou mission consistant à devenir propriétaire d’un terrain avant de lui donner une dimension ou une affectation collective.
@@ -97,11 +113,11 @@
 		Comme opérateur public, il y a l’architecte des bâtiments de France qui est pris dans l’instruction, puis il y a les opérateurs privés, les maîtres d’œuvre comme l’architecte, les géomètres
 		Il y a les opérateurs (terme générique qui englobe promoteur lotisseur investisseur MO) souvent assisté par un AMO, un assistant à maître d’ouvrage
 		Il peut avoir comme opérateur, des marchands de biens aussi. Il y a les lotisseurs, et les aménageurs. Dans les aménageurs (opération importante d’aménagement comme des ZAC et concession) il y a les aménageurs privés, les société d’économie mixte locale SEML, à l’intérieur, il y a les SEM in house capitalisée par les collectivités locales avec un avantage dans certaines ZAC, et les SEM classique avec un partage équivalent entre société privée et collectivité locale, autre cas d’aménageur c’est la collectivité locale alors c’est une opération un aménagement en régi.
-		
-		
-		
-		
-		
+
+
+
+
+
 		Par la nature de ses actes
 		3 grandes catégories d’actes :
 		-	Les actes individuels : PC, autorisation de lotir devenu permis d’aménager, la décision de préemption.
@@ -110,8 +126,8 @@
 		Dans une étude de 1991, une catégorie d’actes intermédiaires : actes non réglementaires qui comprendraient l’acte créant une ZAC, acte hybride et les DUP, les déclaration d’utilité publique qui sont des arrêtés préfectoraux qui portent expropriation de terrain
 		Ils seraient non réglementaires car concernent une pluralité d’administrés non identifiés ou identifiables.
 		Ex : quand je créé une ZAC j’insère un nombre identifiable propriétaire de parcelle
-		
-		Les actes individuels : 
+
+		Les actes individuels :
 		Première caractéristique : les effets par la notification de l’acte
 		ils ont un processus d’opposabilité particulier, ils produisent des effets juridiques de manière distincte que les actes réglementaires
 		Effet dès notification par l’administration à son pétitionnaire
@@ -119,7 +135,7 @@
 		Un PC dès lors qu’il est délivré, notifié, il donne, dès réception, des droits complets, soit le droit instantanément d’engager des travaux par exemple. La mise en œuvre de l’acte est immédiate. Les droits sont insérés dès que l’on reçoit le permis.
 		La difficulté est qu’au moment de la réception du PC et que l’on affiche, il n’y a pas de délai pour l’afficher. Cet affichage ne donne pas le droit de mettre en œuvre, mais l’affichage va donner une information aux tiers, cela va permettre aux associations, aux riverains d’en avoir connaissance pendant 2 mois continu, va permettre de contester ou de consulter le dossier. Un recours gracieux (auprès du maire) ou contentieux (devant le TA) sera alors possible dans le délai de 2 mois, à compter de l’affichage du permis sur le site.
 		Le droit est détenu par l’arrêté pas par l’affichage.
-		Permis définitif : 
+		Permis définitif :
 		-	Exempt de tout recours de tiers (donc gracieux et/ou contentieux)
 		-	Exempt de tout retrait administratif : faculté d’une commune par le truchement de son maire de retirer le PC dans un délai de 3 mois à partir de la réception de la notification, s’il estime que le PC comportait des irrégularités qu’il n’a pas eu le temps de voir
 		-	Exempt de toute lettre d’observation défavorable du préfet /ou déféré préfectoral. Hypothèse dans laquelle 95% des actes d’urbanisme et d’aménagement doivent être transmis par les CL au préfet pour que ce dernier exerce son contrôle de légalité. La lettre d’observation équivaut à un recours gracieux. Il a un délai de 2 mois à partir de la réception du dossier complet
@@ -127,7 +143,7 @@
 		Si les 3 premières hypothèses ne sont pas purgées, le permis n’est pas encore définitif
 		Un permis définitif ne donne pas plus de droit. Même un permis non exempt de recours, on peut le transférer, le modifier, le proroger. C’est dans l’expression et mise en œuvre de ce droit que l’on se trouve sécurisé.
 		J’obtiens un permis définitif puis un modificatif qui est attaqué. Cela n’interagit pas sur le permis initial. Il y a des droits acquis.
-		Les actes réglementaires : 
+		Les actes réglementaires :
 		Leur opposabilité c’est l’affichage, généralement double affichage par la délibération qui approuve le PLU (élaboré, modifié…) et dans 2 journaux locaux.
 		C’est à partir de cette publicité que le changement d’un PLU se fait, sans ces mesures de publicité, le PLU n’est pas opposable.
 		Contrairement aux AI, il ne créé pas de droits au regard de la théorie des droits acquis.
@@ -136,8 +152,8 @@
 		Autre manière de contester par la demande d’abrogation : aucun règlement illégal ne doit être maintenu et a fortiori appliqué.
 		Or un PLU est un règlement donc possible d’une demande d’abrogation à la collectivité en invoquant des vices de formes ou de fond, par un recours gracieux en conséquence, solliciter abroger le document. Dans la plupart des cas la collectivité n’y défère pas. Si après 2 mois rien, alors refus, alors déféré devant le JA.
 		Document réglementaire jamais définitif.
-		
-	
+
+
 	\section{La pyramide des normes}
-	
+
 		La documentation est thématique. Il y a une abscence de subsidiarité \dots
