--- a/05_permisConstruire.tex
+++ b/05_permisConstruire.tex
@@ -1,41 +1,180 @@
 \chapter{Permis de construire}
 
+Livre \IV du \curb
+
 \section{Caractères généraux}
+
+	\paragraph{Créateur de droits}
+	Les arretes de \PC sont des actes unilatéraux. Cela signifie qu'ils créent des droits acquis dans un ceratin nombre d'hypo.
+
+	\medbreak Caratère definitif :
+	\begin{enumerate}
+		\item exempte de tout recours de tiers
+		\item controle de legalité
+		\item retrait de la part de l'administration
+	\end{enumerate}
+	rappel de la problematique de l'aide juridictionnelle.
+
+	Donne des droits uniquement au titulaire du permis.
+
+	Cependant ne peut etre mis en oeuvre que dans le cas où il devient titulaire de droits réels, sauf cas du mandat, en particulier le Contrat Promotion Immobilière.
+
+	\paragraph{Unicité du \PC}
+	Le permis est \textbf{unique}. Il peut être émis pas le maire ou le présidnet d'une EPCI ou par le préfet. Il porte sur l'urbanisme, la fiscalité et parfois sur des prescriptions techniques. Progressivement le juge te le législateur ont remis en cause l'unicité.
+
+	En matière de fiscalité, le juge a accepté que le bénéficiaire puisse contester son propre permis, uniquement pour ce point.
+
+	Le législateur a introduit une seconde altération lorsu'il y avait des contentieux. Il a permis de faire des annulations partielles.
+
+	L'nicité est donc relative.
+
+	\medbreak Néanmoins un \PC constitue un ensemble dans la plupart des cas.
 
 \section{Contenu du dossier de demande et pièces complémentaires}
 
+	\articleDu[R]{431-4}{\curb} et \articleDu[R]{431-5}{\curb}
+
+	Le juge a considéré qu'ils ont un caractère exhaustif.
+
+	\jurisCE{}. \PC pour un immeuble collectif avec parking en sous-sol, non ERP.
+
+	\begin{enumerate}
+		\item identité des demandeurs (avec SIRET ou date de naissance)
+
+			Important car possibilité de la detention d'un \PC par plusieurs co-détenteurs\footnote{\jurisCE{1999} nouveau logis}.
+
+			Possibilité d'un PC par une société en cours de constitution.
+
+			Possibilité de se faire représenter par un mandataire (souvent l'architecte).
+
+		\item identité de l'architecte auteur du projet.
+
+		\item localisation du terrain (plan de situation). Un PC doit etre d'un seul tenant car il s'agit de l'unité foncière d'assiette.
+
+		\item Nature des travaux. (Cf. PLU)
+
+		\item SDP des constructions projetées.
+
+		Il arrive que pour minorer la SDP (ou de bonne foi mais pour des raisons techniques apparaissant par la suite) le petitionnaire sous-déclare les superficie démolie. Ceci est une infraction pénale. Il faut arreter les travaux et obtenir un \PCM.
+
+		\item Puissance électrique nécessaire dans certaine conditions.
+
+		\item Les éléments nécessaire pour la fiscalité.
+
+		\item Des plans (plan de masse faisant apparaitre les arbres, la denivelé ; plan de coupe, plan de façade)
+
+		\item un notice de présentation
+	\end{enumerate}
+
+	\juriCAA{Lyon}{} ?
+
+
+
 \section{Déroulement et incidents dans la phase d'instruction}
 
-\section{Résultats de l'instruction}
+	Guichet Unique
+
+	3 phases :
+	\begin{itemize}
+		\item \textbf{Le 1\ier{} mois de l'instruction} Au dépot, recepissé avec le numéro de depot.
+
+		L'administration à alors 1 mois pour formuler une demande de pieces suplémentaires (documents ou informations).
+
+		Si manifestation un peu tardive. Pas de nouveaux délais.
+
+		Si demande irrégulière de pièces complémentaires (superfétatoire), sont des demandes abusives et faisant grief au pétitionnaire donc attaquable. Possibilité de classement sans suite
+
+		\item \textbf{}
+
+		Phase trés importante
+
+		\item \textbf{La fin de l'instruction}
+			\begin{enumerate}
+				\item L'acceptation pure et simple (express) du projet. envoi par courrier simple.
+				\item le pc avec des prescriptions techniques. Caractère unitaire du permis. Donc doivent être mises en oeuvre sinon pas.
+
+				Envoi en lrar
+
+				\item Sursis à statuer. Equivaut à une réponse négative.
+
+				2 conditions :
+				\begin{enumerate}
+					\item Cas des revisions du PLU
+					\item il faut que les futures règles empechent le projet
+				\end{enumerate}
+
+				pour une durée maximale de 2 ans.
+
+				\item Rejet
+
+				\item Le silence de l'administration : la delivrance tacite.
+
+				R431-5 et suivants
+
+				Sauf quelques cas trés rare.
+
+				\medbreak souvent retard à l'allumage d'un retard. Dans ce cas, la commune
+			\end{enumerate}
+	\end{itemize}
+
+\section{Résultats de l'instruction} % Quel interet ?
+
+	decision express ou tacite
 
 \section{Les différents type de permis de construire}
 
 	\subsection{PC et PCM}
-	
+
+		% 28/05/2020 2'06'00
+		Le régime du PCM n'est pas écrit. Il n'y a pas de PCM dans le code.
+
+		Juris considère que l'on reste dans un modificatif si modi moins à 20\%. Au cas par cas entre 20 et 30 \%, et sinon.
+
+		Astuce : PCM plutot que transfert pour changer de beneficiaire. Dans ce cas quleques jours.
+
 	\subsection{PC rectificatif}
-	
+
 	\subsection{PC de régularisation}
-	
-	\subsection{PC valant division (article R.~431-24)}
-	
+	La régularisation est l'objet du permis. Dans sa forme il s'agit d'un PC ou d'un PCM.
+
+	2 cas :
+	\begin{itemize}
+		\item cas opérationnel
+
+		PC obtenu, mais léger écart à la fin des travaux. Permis << balais >>.
+
+		la Commune est tenue de mettre en demeure le de régulariser. Le PC de régularisation s'apprécie à la date de délivrance.
+
+		\item cas juridictionnel
+
+	\end{itemize}
+
+	\subsection{PC valant division (article R.\,431-24)}
+
+		C'est un deux en un.
+
 	\subsection{PC précaire}
-	
+
+		permis qui a vocation a concerné un immeuble sans pérenité, des constructions précaires.
+
 \section{Transfert de PC}
 
 	\subsection{Transfert de droit commun et total}
-	
+
 	\subsection{Transfert partiel}
-	
+
 \section{Prorogation du PC}
-	
+
+tEHDcd11bB/TUpUHp91wpEUL7E/T1lmairU0zQe41v0
+
 	\subsection{Prorogation sans démarrage du chantier}
-	
+
 	\subsection{Prorogation du fait des travaux engagés}
-	
+
 \section{Retrait du PC}
-	
+
 	\subsection{Principe et modalités du retrait}
-	
+
 	\subsection{Retrait à tout moment dans l'hypothèse d'un PC obtenu grâce à des manœuvres commises par le pétitionnaire}
-	
+
 \section{Le régime de la conformité administrative (totale ou partielle)}
