--- a/02_normesNationalesPlanificationLocale.tex
+++ b/02_normesNationalesPlanificationLocale.tex
@@ -1,22 +1,102 @@
+% !TeX root = droitUrbanisme.tex
 
-\chapter{Normes nationales et planification locale}
-
+\chapter[Normes nationales et planif. locale]{Normes nationales et planification locale}
 
 \section{Le règlement national d'urbanisme (RNU)}
-	
+
+	L'\articleDu[L]{101-3}{\cu} dispose que le règlement national d'urbanisme (RNU) a vocation à prévoir les règles générales applicables en matière d'utilisation des sols, à l'exception des collectivités d'outre-mer. Ces règles porteront notamment sur la localisation, la desserte, l'implantation et l'architecture des constructions, le mode de clôture et la tenue décente des propriétés foncières et des constructions.
+
+	Ces règles générales, qui constituent le RNU, s'appliquent dans toutes les communes à l'exception des territoires dotés d'une carte communale, d'un plan d'occupation des sols (POS) rendu public ou d'un plan local d'urbanisme (PLU) approuvé ou d'un document en tenant lieu. Toutefois, le RNU peut désigner celles de ces règles qui demeurent applicables sur les territoires couverts par ces documents.
+
+	\medbreak Il constitue à la fois la réglementation d'urbanisme minimale applicable sur tout le territoire en l'absence de règles plus précises et, pour certaines de ses dispositions, une réglementation nationale d'ordre public prévalant sur des règles locales qui ne respecteraient pas ces objectifs.
+
+	Ce double caractère caractérise son champ d'application. Mais, du fait de la généralité de leur champ d'application, les dispositions du RNU ont un contenu généralement assez imprécis et un caractère principalement permissif.
+	Elles laissent à l'autorité administrative chargée de les appliquer un large pouvoir d'appréciation. Ce qui donne une place importante au contrôle du juge sur la mise en œuvre du RNU.
+
+	\medbreak La dernière refonte importante du RNU a été réalisée par ordonnance du \printdate{23/09/2015}, suivie de trois décrets en décembre 2015 et janvier 2016\footnote{\cu*, art. R.*\,111-1 s.}. Ce règlement est applicable à toutes les constructions, aménagements, installations et travaux faisant l'objet d'un permis de construire, d'un permis d'aménager ou d'une déclaration préalable ainsi qu'aux autres utilisations du sol régies par le code de l'urbanisme.
+
 	\subsection{Contenu}
-	
+
+	Le RNU dans la rédaction qu'en donne le décret du \printdate{5/1/2007} est divisé en trois sections :
+	\begin{itemize}
+		\item la section 1 concernant la localisation et la desserte des constructions (\cu*, art. R.\,111-2 à R.\,111-15) ;
+		\item la section 2 regroupant les règles relatives à l'implantation et au volume des constructions (\cu*, art. R.\,111-16 à R.\,111-20) ;
+		\item et la section 3 étant relative à l'aspect des constructions (\cu*, art. R.\,111-21 à R.\,111-24).
+	\end{itemize}
+
+		\subsubsection{Règles relatives à la localisation et à la desserte des constructions}
+
+			Le règlement national d'urbanisme contient tout d'abord des règles relatives à la localisation et à la desserte des constructions, aménagements, installations et travaux. Parmi celles-ci, est d'ordre public celle selon laquelle un projet peut être refusé ou n'être accepté que sous réserve de l'observation de prescriptions spéciales s'il est de nature à porter atteinte à la salubrité ou à la sécurité publique du fait de sa situation, de ses caractéristiques, de son importance ou de son implantation à proximité d'autres installations.
+
+			S'appliqueront sur les territoires non couverts par un PLU les règles selon lesquelles un projet peut être refusé ou accepté sous réserves s'il est susceptible d'être exposé à des nuisances graves, dues notamment au bruit, celle selon laquelle un projet peut être refusé s'il n'est pas correctement desservi par des voies publiques ou privées ou encore la possibilité pour l'autorisation d'occupation du sol d'imposer notamment la réalisation de places de stationnement ou de voies privées nécessaires au respect des règles de desserte des constructions. De même, le RNU contient des règles relatives à la desserte des constructions par les réseaux d'eau potable et d'assainissement ou encore une règle permettant de refuser un projet qui implique la réalisation d'équipements publics hors de proportion avec les ressources de la commune d'implantation.
+
+		\subsubsection{Règles relatives à l'implantation et au volume des constructions}
+
+			Parmi les règles relatives à l'implantation et au volume des constructions, le RNU prévoit qu'une distance d'au moins trois mètres peut être imposée entre deux bâtiments non contigus situés sur un terrain appartenant à un même propriétaire ou encore qu'un bâtiment édifié en bordure de voie publique doit être distant de celle-ci d'au moins la hauteur de ce bâtiment, règles toutes deux applicables sur les territoires non couverts par un PLU. De même, à moins que le bâtiment à construire ne jouxte la limite parcellaire, le RNU prévoit que la distance comptée horizontalement de tout point de ce bâtiment au point de la limite parcellaire qui en est le plus rapproché doit être au moins égale à la moitié de la différence d'altitude entre ces deux points, sans pouvoir être inférieure à trois mètres.
+
+			Le RNU prévoit que des dérogations à ces règles peuvent être accordées par décision motivée de l'autorité compétente en matière d'autorisations d'urbanisme (après avis du maire de la commune dans le cas où celui-ci n'est pas l'autorité compétente).
+
+		\subsubsection{Règles relatives à l'aspect des constructions}
+
+			Le RNU désigne comme d'ordre public la règle selon laquelle le projet peut être refusé ou accepté sous réserves si les constructions, par leur situation, leur architecture, leurs dimensions ou l'aspect extérieur des bâtiments ou ouvrages à édifier ou à modifier sont de nature à porter atteinte au caractère ou à l'intérêt des lieux avoisinants, aux sites, aux paysages naturels ou urbains ainsi qu'à la conservation des perspectives monumentales.
+
+			Dans les secteurs déjà partiellement bâtis, présentant une unité d'aspect, l'autorisation de construire à une hauteur supérieure à la hauteur moyenne des constructions avoisinantes peut être refusée ou subordonnée à des prescriptions particulières.
+
+			Ne s'applique pas, en revanche, sur les territoires couverts par un PLU, la règle selon laquelle les murs séparatifs et les murs aveugles apparentés d'un bâtiment doivent, lorsqu'ils ne sont pas construits avec le même matériau que les murs des façades principales, avoir un aspect qui s'harmonise avec celui des façades.
+
 	\subsection{Effets}
 
-\section{Le grands principes du droit de l'urbanisme (art. L.~101-1 et L.~101-2)}
-	
+\section[Les GPDU]{Les Grands Principes du Droit de l'Urbanisme (\articleCodifie*{L}{101-1} et \refArticle{L}{101-2})}
+
+	Les principes et objectifs généraux figurent, en droit de l'urbanisme, aux \articlesCodifies{L}{101-1} à \refArticle{L}{ 101-3} du \cu.
+
 	\subsection{Contenu}
-	
+
+		\paragraph{Dispositions de l'article L.\,101-1 du Code de l'urbanisme}
+
+			Les collectivités publiques sont les gestionnaires et les garantes dans le cadre de leurs compétences du territoire français considéré comme le patrimoine commun de la nation.
+
+			L'\articleDu[L]{101-1}{\cu} a pour objectif d'imposer aux différentes collectivités publiques l'harmonisation de leurs prévisions et de leurs décisions d'utilisation de l'espace en renvoyant à la réalisation des objectifs définis à l'\articleDu[L]{101-2}{\cu}.
+
+			Le Conseil d'État a précisé qu'aucune disposition n'impose qu'un plan d'occupation des sols soit compatible avec ceux des communes voisines pour respecter le principe d'harmonisation posé par l'ancien \articleDu[L]{110}{\cu}\footnote{\jurisCE[109114]{24/6/1992}, Cne Pomerols}.
+
+		\paragraph{Différents objectifs de l’article L.\,101-2 du Code de l'urbanisme}
+
+			L'\articleDu[L]{101-2}{\cu} fait référence aux objectifs du développement durable tout en précisant que l'action des collectivités publiques en matière d'urbanisme vise à atteindre sept objectifs énoncés dans cet article. Ces différents objectifs n'ont cessé de s'allonger au fur et à mesure des modifications législatives.
+			\begin{quote}
+				\itshape
+				1° L'équilibre entre :
+
+				a) Les populations résidant dans les zones urbaines et rurales ;
+
+				b) Le renouvellement urbain, le développement urbain maîtrisé, la restructuration des espaces urbanisés, la revitalisation des centres urbains et ruraux ;
+
+				c) Une utilisation économe des espaces naturels, la préservation des espaces affectés aux activités agricoles et forestières et la protection des sites, des milieux et paysages naturels ;
+
+				d) La sauvegarde des ensembles urbains et la protection, la conservation et la restauration du patrimoine culturel ;
+
+				e) Les besoins en matière de mobilité ;
+
+				2° La qualité urbaine, architecturale et paysagère, notamment des entrées de ville ;
+
+				3° La diversité des fonctions urbaines et rurales et la mixité sociale dans l'habitat, en prévoyant des capacités de construction et de réhabilitation suffisantes pour la satisfaction, sans discrimination, des besoins présents et futurs de l'ensemble des modes d'habitat, d'activités économiques, touristiques, sportives, culturelles et d'intérêt général ainsi que d'équipements publics et d'équipement commercial, en tenant compte en particulier des objectifs de répartition géographiquement équilibrée entre emploi, habitat, commerces et services, d'amélioration des performances énergétiques, de développement des communications électroniques, de diminution des obligations de déplacements motorisés et de développement des transports alternatifs à l'usage individuel de l'automobile ;
+
+				4° La sécurité et la salubrité publiques ;
+
+				5° La prévention des risques naturels prévisibles, des risques miniers, des risques technologiques, des pollutions et des nuisances de toute nature ;
+
+				6° La protection des milieux naturels et des paysages, la préservation de la qualité de l'air, de l'eau, du sol et du sous-sol, des ressources naturelles, de la biodiversité, des écosystèmes, des espaces verts ainsi que la création, la préservation et la remise en bon état des continuités écologiques ;
+
+				7° La lutte contre le changement climatique et l'adaptation à ce changement, la réduction des émissions de gaz à effet de serre, l'économie des ressources fossiles, la maîtrise de l'énergie et la production énergétique à partir de sources renouvelables.
+			\end{quote}
+
+			Le principe d'équilibre est important. Le Conseil d'État a eu l'occasion d'annuler sur la base de l'erreur manifeste d'appréciation, la création d'une zone NAF (zone de construction future insuffisamment équipée qui peut être urbanisée) à vocation industrielle, artisanale et de services à proximité d'un parc boisé de 40 hectares, classé comme site à protéger, en considérant, notamment, que la révision du POS correspondante ne respectait pas le principe d'équilibre de l'\articleDu[L]{110}{\cu}\footnote{\jurisCE[115248]{21/10/1994}, Cne Bennwihr : JurisData \no 1994-052178 ; Lebon T., p. 1235 ; Dr. adm. 1994, comm. 695}. Le juge a eu l'occasion de vérifier le respect de l'équilibre entre l'extension urbaine, l'exercice des activités économiques et la préservation des milieux, sites et paysages naturels\footnote{\jurisCAA[09NC00452]{Nancy}{11/02/2010}, Cne Berentzwiller et a. : JurisData n° 2010-000719}. Un PLU a été annulé pour violation du principe d'équilibre entre le développement urbain et la gestion économe des espaces naturels et ruraux\footnote{\jurisCAA[10NT02174]{Nantes}{14/05/2012}, Cne Boissy-lès-Perche : JurisData \no 2012-014904}.
+
 	\subsection{Effets}
 
 \section{Les dispositions relatives à la loi montagne et au littoral}
 
-	Loi montagne de 1985 codifiée en majdure partie CDU L122-1 et suivants et littorale L121-1 et suivants
+	La loi montagne de 1985 codifiée en majeure partie par les \articlesDuEtSuivants[L]{122-1}{\cu} et littorale L121-1 et suivants
 	Loi montagne a des dispositions protectrices du cadre pastorale agricole avec quasi impossibilité de densifier l’urbanisation.
 	Ces lois s’imposent au PC, ou sont reprises dans le DTA ou SCOT et DDTU
 	Sur la loi montagne il y a un processus les UTN Unité touristique nouvelle : possibilité dans une cogestion entre commune et intercommunalité et préfet, d’organiser une urbanisation importante dans les zones de montagnes.
@@ -32,411 +112,411 @@
 	Dernière notion, celle de l’extension de l’urbanisation en continuité avec des agglomération et village existant
 	On a la bande de 100 m quasi constructibilité, puis espace proche du rivage, donc est ce que l’on peut imaginer une urbanisation plus lourde si extension en continuité par rapport à un village existant L121-8 du CDU seule manière de m’affranchir d’une urbanisation limitée sauf que dans ce cas le JA est exigent sur la notion de village ou agglomération existant : densité suffisamment fort d’urbanisation avec une centralité
 	Le JA va regarder au cas par cas la constitution de l’urbanisation existante, densité de maison de voirie, d’équipement public suffisant pour considérer que l’on est en présence d’un village ou agglomération existant.
-	
+
 	L121-13 espace remarquable : espace sur commune littorale (comme parcelle en cravate) la loi littorale s’applique car la commune a une façade littorale, alors ce troisième espace dit remarquable s’appliquera.
 	Les espaces remarquables contiennent des espèces animales et végétales propres aux espaces littoraux mais aussi des espaces avec des vestiges ou éléments patrimoniaux propres au littoral. Sur ces espaces, le JA pourra considérer que telle zonage d’un PLU au regard de  cette loi littorale ou tel PC ne sont pas compatibles avec ces espaces remarquables issus de la loi littorales.
-	
+
 	Erreur manifeste en méconnaissant des éléments remarquables qui auraient du être protégés, si EMA par le maire dans le PC alors illégalité alors annulation du PC.
-	
+
 
 \section{Les schémas directeurs et les nouveaux schémas de cohérences territoriale (SCOT)}
-	
+
 	\subsection{Contenu}
-	
+
 	\subsection{Effets (compatibilité)}
 
 \section{Les Plans locaux d'urbanisme (PLU)}
-	
+
 	\subsection{Contenu des PLU (éléments obligatoires et facultatifs)}
-	
+
 		\subsubsection{Le rapport de présentation} (Articles R151-1 à R151-5)
-		
-		
-		\subsubsection{Les orientations d'aménagement et de programmation} 
+
+
+		\subsubsection{Les orientations d'aménagement et de programmation}
 		(Articles R151-6 à R151-8-1)
-		
-		\subsubsection{Le règlement} 
-		
+
+		\subsubsection{Le règlement}
+
 		... ici reprise du cours ...
-		
+
 		\subsubsection{Les annexes}
-		
+
 		Elles forment la dernière partie du PLU. Elles sont opposables au même titre que les autre éléments du PLU.
-		
+
 		Les PPR sont annexé dans cette partie. Néanmoins, dès lors que ces PPR ne sont pas annexé, ils sont de manière autonome opposable, de la même manière que s'ils s'y trouvait.
-	
+
 	\subsection{Analyse détaillé d'un règlement de PLU}
-		
-		Le réglement de PLU est constituée de plusieurs parties décrites aux articles R 151-9 et suivants 
-		
+
+		Le réglement de PLU est constituée de plusieurs parties décrites aux articles R 151-9 et suivants
+
 		1. un index, ou lexique appelé souvent définition des élements de définition une meilleur compréhension. Ces définitions sont opposables tant au pétitionnaire qu'à l'administration.
-		
+
 		2. les règles générales. Les regles et disposition qui sont suceptible de s'appliquer sur plusieurs zones. Par exemple la reconstruction d'un bâtiment à l'identique. Parfois, on y trouve l'interdiction ... dans un article dédié
 		R 151-21 sur la mutualisation des règles de gabarit qui vaut notamment sur les lotissement et les permis valant division. Ces deux catégories de permis particulier si la mutualisation n'a pas été interdite.
-		
+
 		Elle permet d'avoir une bonne combinaison des différentes règles
-		
+
 		3. Les zonages. C'est la partie la plus connue, celle qui permet de manière précise d elocaliser une parcelle et d'identifier rapidement les règles, ou << precriptions >>, qui vont s'appliquer. Ces zones sont réparties à partir des 4 grandes catégories par le curb :
 			zone U
 			AU
 			A
 			N
-		La définition de ses zones au sein d'un PLU, que ce soit le réglement ou les documents graphiques, sont librement définies sous deux réserves : 
+		La définition de ses zones au sein d'un PLU, que ce soit le réglement ou les documents graphiques, sont librement définies sous deux réserves :
 			- ne pas faire d'erreur de droit. Par exemple faire apparaitre une incompatibilité avec un document supérieur (un SCOT, ou un zonage qui méconnaitréait des dispositions de la loi littorale
 			- ne pas faire d'erreur manifeste d'appréciation (EMA), c'est à dire une erreur grossière relevée par le juge dans la définition du zonage. Par exemple, une zone U d'une commune qui serait limitrophe d'une zone industrielle d'une autre commune.
-			
+
 		\paragraph{Les zone U} R 151-18 (reprise de la définition littérale)
-			
+
 			Les capacité de desserte tant en réseaux qu'en voirie, est suffisante pour ...
-			
+
 			Elles peuvent faire l'objet d'une déclinaison par sous-secteur, et sous-secteur, permettant de mettre en place des règles différenciées.
-			
-		\paragraph{Les zone AU} R 151-20 (reprise de la définition littérale) ... 
-		
+
+		\paragraph{Les zone AU} R 151-20 (reprise de la définition littérale) ...
+
 			Zone AU << mixte >> (alinéa 2) ... la constructibilité n'est possible (lotissement, PC valant division)
-			
+
 			Zone AU << stricte >>, (alinéa 3) ... c'est à dire qui ne permet pas en l'état la délivrance de permis. Il sera nécessaire de sortir de cette catégorie.
-		
+
 		\paragraph{Les zone A} R 151-22 (reprise de la définition littérale)
-		
+
 			On peut tout à fait des zones équipées.
-			
+
 			Il y a trois critères qui ne sont pas les seuls :
 			- en raison de leur potentiel agronomique
 			- ...
-		
+
 		\paragraph{Les zone N} R 151-18 (reprise de la définition littérale)
-			
+
 			équipé ou non
-			
+
 			5 critères ...
-			
+
 			Urbanisation très stricte mais pas impossible. lié à l'activité ou la destination de la zone. sont également admises des extensions de l'urbanisation
-				
+
 			Zone N d'urbanisation diffuse.
-			
+
 		\subsubsection{Les différents articles des zones}
-		
+
 			Jusqu'en 2016, et depuis plus de 40 ans, la nomenclature interne était prévue dans la partie A du code. Un nouve R 151-27 et suivants introduit une nouvelle structuration.
-			
+
 			Dans la pratique, les PLU restent structuré de cette manière.
-			
+
 			Il y avait 15 articles 2 ont été abrogé par la loi ALUR et un est apparu sur les économies d'éarge
-			
+
 			\paragraph{Articles 1 \& 2} Ceux sont les articles qui autorisent, interdisent, organisent ou restreignent les destinations des futurs bâtiments ou à rénover. C’est la vocation générale de la zone.
-		
+
 			Il peut y avoir des destination autorisée mais avec des contraintes.
-			
+
 			Par exemple ...
-			
-			R 151-27 et 28 destinations et sous destination 
-			
+
+			R 151-27 et 28 destinations et sous destination
+
 			SINASPIC
-			
-			\paragraph{Articles 3 \& 4} relatif à la desserte réseau et voirie. Limite ou non l’accès à la parcelle par sa largeur.  
-			
-			\paragraph{Article 5} Il a été abrogé par la loi ALUR, à l'exception de 3 communes : Maison Laffite. Cet article encadrait la constructibilité en fonction de la taille des parcelles. 
-			
+
+			\paragraph{Articles 3 \& 4} relatif à la desserte réseau et voirie. Limite ou non l’accès à la parcelle par sa largeur.
+
+			\paragraph{Article 5} Il a été abrogé par la loi ALUR, à l'exception de 3 communes : Maison Laffite. Cet article encadrait la constructibilité en fonction de la taille des parcelles.
+
 			\paragraph{Articles 6, 7 \& 8} Ce sont les règles de prospect (ou de recul). Ils sont considéré comme simple à expliquer mais difficiles à mettre en œuvre.
-			
-			L'article 6 traite des retraites par rapport à une voie public ou un espace public. Toute emprise créant. A priori l'ouverture au public suffit. 
-			
+
+			L'article 6 traite des retraites par rapport à une voie public ou un espace public. Toute emprise créant. A priori l'ouverture au public suffit.
+
 			L'article 7 traite du recul par rapport aux autres parcelles privées.
-			
+
 			L'article 8 est relatif aux règles de recul entre deux bâtiments sur une même parcelle. Le plus souvent cet article est plus clément que l'article 7. Les gestes architecturaux pour y échapper ont parfois été sévèrement.
-			
+
 			Les << conventions de cours commune >> permettent d'aménager ces règles en permettant d'appliquer les règles de l'article 8 alors même que ceux sont celles de l'article 7 qui auraient à s'appliquer.
-			
+
 			\paragraph{Article 9} C'est l'article relatif aux emprises qui permet de limiter la superficie du projet, y compris les emprises minérales.
-			
+
 			\paragraph{Article 10} C'est l'article relatif aux hauteurs des bâtiments. Cette hauteur peut être appréhendée au faitage ou à l'égout des toitures.
-			
+
 			Souvent il y a possibilité de dépasser cette hauteur pour un certain nombre d'édicule, si l'auteur du PLU l'a prévu et mentionné.
-			
+
 			...
 			La règle que l'on voit communément est de prendre le point médian d'un segment parallèle à la voirie.
-			
+
 			Souvent le point bas se fait à partir du terrain naturel, qui est souvent repéré sur les plans du permis de construire ...
-			
-			\paragraph{Article 11} Article relatif aux aspects extérieurs des projets : 
-			
+
+			\paragraph{Article 11} Article relatif aux aspects extérieurs des projets :
+
 			Parfois se limite à une reprise de R 111-27, c'est à dire l'article du RNU relatif ...
-			
-			\paragraph{Article 12} relatif aux stationnements (auto, vélo, moto, poussette).  ... 
-			
+
+			\paragraph{Article 12} relatif aux stationnements (auto, vélo, moto, poussette).  ...
+
 			Les auteurs peuvent rentrer dans un relativement grand détail. Il est possible de : préciser la dimension des places, d'interdire ou autoriser les places commandées, ventiler le ratio des place par destination, \etc Depuis quelques années, la tendance est à la diminution des contraintes au sein de cet article pour diminuer l'importance des voitures en ville.
-			
+
 			possibilité .. par le paiement d'une redevance ... Cette participation n'est plus valable. Il n'est plus possible de s'exonérer de la réalisation des places. Cette disposition a été abrogée car les sommes perçues n'étaient pas utilisées pour réaliser les parking nécessaires.
-			
+
 			Il est possible de s'acquitter e l'obligation de réaliser les places, soit en les réalisant lui-même soit aller les rechercher dans un parking proche (sous forme d'une amodiation) ou, depuis la loi SRU, au sein d'un parking privé proche.
-			
+
 			Si CINASPIC, le plus souvent il n'y a aucun minimum pour les SINASPIC mais simplement la nécessité du montant ... nécessaire
-			
+
 			\paragraph{Article 13}  Article sur les espaces verts et le espace libres. C'est un article qui se décline souvent en plusieurs chapitre.
-			
+
 			Espace Boisé Classé pas forcément boisé ...
-			
+
 			Espace engazonnée. Les auteurs du PLU peuvent aussi exiger que la superficie soit en pleine terre
-			
+
 			Espace libre : par exemple des cours.
-			
+
 			\paragraph{Article 14} Article sur le COS. Il a été abrogé par la loi ALUR.
-			
+
 			\paragraph{Article 14} 3 mots
-			
-		\subsubsection{Effet } ... 
-		
+
+		\subsubsection{Effet } ...
+
 		Les effets du PLU sont une opposabilité totale dans une relation de conformité, mais également deux regles :
 			- regle complementaire, lorsqu'il y a un permis dans un perimetre d'oap, il doit y avoir compatibilité avec les orientations de l'oap
 			- le legislateur que sur certain aspects, il y a lieu de pemettre des exceptions R 152-5 à 152-9
-	
+
 	\subsection{Procédure d'élaboration et de révision générale des PLU (les trois phases)}
-	
+
 		L'élaboration d'un PLU les 1ere en 2001 - 2002, suite à la loi SRU de décembre 200 qui a changé des ...
-		
+
 		Les 1er PLU ont été dans leur grande majorité attaqués. Les PLU ont supplanté les POS --- il n'y a plus de POS ou De PAZ applicable.
-		
+
 		Le PLU est l'outils de droit commun ...
-		
+
 		Qu'est ce qui pousse une commune à élaborer ou réviser son PLU. Depuis octobre 2017, il est fait obligation d'appliquer le RNU (R 111-1 et suivants) aux communes ayant toujours un POS. Les communes sont donc vivement incités à élaborer un PLU. Il y a certaine région, la Corse par exemple,  qui ont fait le choix de rester en RNU.
-		
-		La 
-		
+
+		La
+
 		\paragraph{Réflexion sur le périmètre} Contrairement ax anciens POS, il n'est pas possible d'élborer un PLU partiel. Le PLU doit nécessairement couvrir l'intégralité du territoire communal --- ou intercommunal L153-1.
-		
+
 		Deux exceptions :
 			- L 153-3, lorsqu'il y a fusion d'EPCI
 			- plus fréquemment, lorsqu'il y a annulation partielle, ou déclaration d'illégalité partielle, d'un PLU.
 			(12 mn environ) %L'annulation partielle peut provenir d'une décision d'un juge site à un recours sur un PC.
-			
+
 			Dans ce cas deux conséquences : le zonage ou l'article annulé ... on reprend le doc d'urbanisme antérieur.
 			(zut j'ai décroché)
-			
+
 			La déclaration (exception )d'illégalité pas de possibilité de le conserver .. = paralysie
-			
+
 			Dans ces deux cas nous avons une disparition.
-			
+
 			Ce qui peut poser problème si des pétitionnaires << s'engouffrent dans la brèche >> et déposent des demande de PC. Il faut que la commune fasse vite.
-			
+
 			3 phaseq :
 			(début partie 2)
 			prescription
 			arrert
-		
+
 		\paragraph{Première délibération}
-		
-		Article L 153-11 << cite 
+
+		Article L 153-11 << cite
 		Le Maire est incompétent pour lancer c'est le Conseil Municipal. On trouve dans la délib :
-		 - objectifs poursuivis (protection, développement économique, intensification des liaisons douces, \etc) 
+		 - objectifs poursuivis (protection, développement économique, intensification des liaisons douces, \etc)
 		 - les modalités de la concertation. Elles sont librement définies par la collectivité. Fréquemment on trouve :
 		 	- des réunions publiques
-		 	- 
+		 	-
 		 	- un premier calendrier prévisionnel
 		Il n'y a pas  de durée particulière. Ce qui est exigé est que la concertation s'arrête, et que le bilan soit tiré, avant l'enquête publique.
-		
+
 		Le 3\ieme{} alinéa de 143-11 prévoit la possibilité de << sursoir à statuer >> dès lors que des demandes d'autorisation seraient contraire aux prescriptions du futur PLU. En pratique :
 			- Cette possibilité n'est possible que dans l'élaboration d'un PLU, ou une révision générale ;
 			- Cette possibilité n'est possible qu'après la délibération qui consacre le débat sur les orientations générales du projet d'aménagement et de développement durable. modification en 2017 tenant compte de la jurisprudence pour ajouter --- auparavant il était possible de sursoir à statuer dès lors que la délibération ... l'élaboration du PLU ;
-		
+
 		\paragraph{Deuxième délibération sur le PADD.}
-		
-		Cela suppose qu'il y ait eu un débat, dont on conserve une trace. 
-		
+
+		Cela suppose qu'il y ait eu un débat, dont on conserve une trace.
+
 		A partir de ce délibération, le sursis à statuer devient possible. Le juge reste souverain pour estimer si l à pris une consistance suffisante. La difficulté pour le pétitionnaire est qu'en dehors des moments où émerge ... et jusqu'à l'enquête publique, peu d'information filtre sur l'avancée des travaux d'élaboration. Le pétitionnaire est donc dans l'incertitude sur le niveau d'avancement. Plus le temps passe, plus il est probable que le sursis à statuer soit fondé.
-		
-		\paragraph{Arrêté de projet du PLU } Lorsque le document est 
-		
+
+		\paragraph{Arrêté de projet du PLU } Lorsque le document est
+
 		Communication aux PPA L 153-16
-		
+
 		L 153-17 plus pernicieux car il évoque l'obligation de communiquer, à leur demande, à d'autres collectivités locales. Pour demander, il faut connaitre. Donc il faut informer pour pouvoir prouver qu'ils étaient au courant.
-		
+
 		Délais de 2 mois.
-		
+
 		Réception de l'ensemble des avis des PPA.
-		
+
 		Si il. La collectivité peut décider d'intégrer les observations.
-		
+
 		Si ces ajustements sont purmeent conformes. S'il y a des modifications substantielles -> nouvelles consultations des PPA. Ces avis ne sont pas publics à ce stade.
-		
+
 		\paragraph{Préparation de l'enquête publique}
-		
+
 		elle est important car elle va consacrer le PLU dans un état quasi définitif. Il ne pourra y avoir que des modifications mineures, pas de reise en cause de l'économie générale.
-		
-		Le calendrier ordinaire : 
-		
-		Désignation du commissaire enquêteur. Le président du TA compétent est contacté par le maire pour désignation d'un commissaire enquêteur. 
+
+		Le calendrier ordinaire :
+
+		Désignation du commissaire enquêteur. Le président du TA compétent est contacté par le maire pour désignation d'un commissaire enquêteur.
 		A été jugé comme non impartial le mire adjoint d'une commune limitrophe.
 		Le maire reçoit ourrier, puis
-		
+
 		Arrête avec le commissaire enquêteur les dates (au minimum 1 mois) et les modalités pratique ainsi que les dates de permanence du commissaire enquêteur. Parfois nomination d'une commission d'enquête.
-		
-		Ensuite information en deux temps. Plusieurs semaines dans la presse locale, en mairie, en mairie annexe, mentionnant l'ensemble des  
-		
+
+		Ensuite information en deux temps. Plusieurs semaines dans la presse locale, en mairie, en mairie annexe, mentionnant l'ensemble des
+
 		Code de l'environnement. Il y a eu énormément de contentieux avec annulation de PLU sur ce sujet.
-		
+
 		Modalité de l'enquête : accès libre et le plus large possible.
 		Obligation d'un registre d'enquête public, qui doit obéir à des règles formelles très stricte.
-		
+
 		On trouve le PLU complet, l'ensemble des avis et les courriers d'envoie avec les dates de transmission, le porter à connaissance ...
-		
+
 		(1h22)
-		
+
 		.. les administrés de la commune, les administrés des communes voisines, les associations, les personnes morales de la communes, les autres collectivités locales \etc il n'y pas de limite. Il est possible de déposer des observations anonymes.
-		
+
 		Depuis quelques années, il y a en parallèle une consultation sur Internet.
-		
+
 		Fermeture des débats, par le commissionnaire enquêteur. Qui collationne . sauf s'il considère que l'enquête publique doit être prorogé. En cas de désaffection importante de la population, ou à l'inverse si l'enquête.
-		
+
 		(1:28)
-		
+
 		Le commissaire enquêteur est souverain de proroger ou non.
-		
+
 		Prépare 2 documents : le rapport et les conclusions.
-		
+
 		Dans le rapport, relate de manière fidèle toute l'enquête ... \etc Ne touche pas au fond du sujet.
-		
-		Pour la rédaction du rapport, en pratique est de rentrer dans le contenu des observations et de proposer à la collectivité une réunion de travail. Toute les questions 
-		
+
+		Pour la rédaction du rapport, en pratique est de rentrer dans le contenu des observations et de proposer à la collectivité une réunion de travail. Toute les questions
+
 		(1:36) << une réponse personnalisée et circonstanciée >>
-		
-		%Si annulation du PLU alors responsabilité de la commune. 
-		
-		Le calendrier de restitution : délai d'un mois, mais pas de sanction. 
-		
+
+		%Si annulation du PLU alors responsabilité de la commune.
+
+		Le calendrier de restitution : délai d'un mois, mais pas de sanction.
+
 		Le commissaire peu rendre des conclusions favorables, sans réserves ni recommandations. C'est de plus en plus rare.
 		Il peut émettre un avis favorable avec des recommandations.
 		Il peut émettre un avis favorable avec des réserves ou des réserves exprès. L'avis ne vaut que si les réserves sont prises en considération. Sinon il faut considérer l'avis comme défavorable.
 		Il peut émettre un avis défavorable.
-		
+
 		Juridiquement la commune peut passer outre les réserves. Mais cela renforce la possibilité de recours. Cela permet au Préfet de demander une suspension en urgence sans avoir à démontrer l'urgence.
-		
+
 		2 critères :
 			- non substantiel
 			- trouve leur source
-			
+
 		\paragraph{Délibération d'approbation}
-		
+
 		On considère que s'il y a un SCOT, il y a aucune raison pour que le PLU ne soit pas exécutoire
-		
-	
+
+
 	\subsection{Les autres procédures d'adaptation des PLU}
-	
+
 		Il ne faut pas utiliser << modifcation >>
 		 Du plus lourd au plus léger.
-		 
+
 		 \subsubsection{Procédure de révision} L 153-31
-		 
+
 		 \begin{quote}
 		 	<< { \itshape
 		 		Le plan local d'urbanisme est révisé lorsque l'établissement public de coopération intercommunale ou la commune décide :
-		 		
+
 		 		1\degres Soit de changer les orientations définies par le projet d'aménagement et de développement durables ;
-		 		
+
 		 		2\degres Soit de réduire un espace boisé classé, une zone agricole ou une zone naturelle et forestière ;
-		 		
+
 		 		3\degres Soit de réduire une protection édictée en raison des risques de nuisance, de la qualité des sites, des paysages ou des milieux naturels, ou d'une évolution de nature à induire de graves risques de nuisance.
-		 		
+
 		 		4\degres Soit d'ouvrir à l'urbanisation une zone à urbaniser qui, dans les neuf ans suivant sa création, n'a pas été ouverte à l'urbanisation ou n'a pas fait l'objet d'acquisitions foncières significatives de la part de la commune ou de l'établissement public de coopération intercommunale compétent, directement ou par l'intermédiaire d'un opérateur foncier.
-		 		
+
 		 		5\degres Soit de créer des orientations d'aménagement et de programmation de secteur d'aménagement valant création d'une zone d'aménagement concerté.
 		 	} >>
 		 \end{quote}
-	 
+
 	 	Les 3 1\ieres{} hypothèses sont les plus importantes.
-	 	
+
 	 	Que dit le juge du 1. S'il y a changement d'une ou plusieurs orientation du PADD alors il s'agit d'une révision.
-	 	
-	 	Le 2 existait déjà du temps des POS. Dès lors que vous 
-	 	
+
+	 	Le 2 existait déjà du temps des POS. Dès lors que vous
+
 	 	Le 3 est presque subjectif. C'est un PPRI
-	 	
+
 	 	\subsubsection{Procédure de modification} L 153-36
-	 	
+
 		 	\paragraph{La modification de droit commun} L 153-41
-		 		
+
 		 		\begin{quote}
 		 			<< {\itshape
 		 				Le projet de modification est soumis à enquête publique réalisée conformément au chapitre III du titre II du livre Ier du code de l'environnement par le président de l'établissement public de coopération intercommunale ou le maire lorsqu'il a pour effet :
-		 				
+
 		 				1\degres Soit de majorer de plus de 20 \% les possibilités de construction résultant, dans une zone, de l'application de l'ensemble des règles du plan ;
-		 				
+
 		 				2\degres Soit de diminuer ces possibilités de construire ;
-		 				
+
 		 				3\degres Soit de réduire la surface d'une zone urbaine ou à urbaniser ;
-		 				
+
 		 				4\degres Soit d'appliquer l'article L. 131-9 du présent code.
 		 			} >>
 		 		\end{quote}
-	 		
+
 	 			Les 3 1\iers{} cas sont les plus importants.
 	 			\begin{enumerate}
-	 				\item Le mot zone n'est pas limité à une mais peut concerner un secteur ou un sous-secteur. Il faut apprécier si la modification des règles gabaritaires\footnote{articles 6, 7, 8, 9, 10 et 13 du règlement} 
-	 				
+	 				\item Le mot zone n'est pas limité à une mais peut concerner un secteur ou un sous-secteur. Il faut apprécier si la modification des règles gabaritaires\footnote{articles 6, 7, 8, 9, 10 et 13 du règlement}
+
 	 				\item  valable pour toute les zones, même en zone N
-	 				
-	 				\item Si on réduit la surface . 
+
+	 				\item Si on réduit la surface .
 	 			\end{enumerate}
-	 		
+
 	 		Souvent 6 ou 7 mois
-	 		
+
 	 		\paragraph{La modification simplifiée} L 153-45
-		 		
+
 		 		\begin{quote}
 		 			<< {\itshape
 		 				La modification peut être effectuée selon une procédure simplifiée :
-		 				
+
 		 				1\degres Dans les cas autres que ceux mentionnés à l'article L. 153-41 ;
-		 				
+
 		 				2\degres Dans les cas de majoration des droits à construire prévus à l'article L. 151-28 ;
-		 				
+
 		 				3\degres Dans le cas où elle a uniquement pour objet la rectification d'une erreur matérielle.
-		 				
+
 		 				Cette procédure peut être à l'initiative soit du président de l'établissement public de coopération intercommunale ou du maire d'une commune membre de cet établissement public si la modification ne concerne que le territoire de cette commune, soit du maire dans les autres cas.
 		 			} >>
 		 		\end{quote}
-		 	
+
 			 	L'erreur matérielle. La plus grave et la plus courante est l'erreur du fonds de plan.
-			 	
-			 	Le cas principal est le 2\ieme{}. Les effets sont importants, tant opérationnellement qu'en terme de contentieux. L  L 153-47 prévoit que les documents << sont mis à disposition du public pendant un mois, dans des conditions lui permettant de formuler ses observations >> sans le formalisme de l'enquête publique. 
-			 	
+
+			 	Le cas principal est le 2\ieme{}. Les effets sont importants, tant opérationnellement qu'en terme de contentieux. L  L 153-47 prévoit que les documents << sont mis à disposition du public pendant un mois, dans des conditions lui permettant de formuler ses observations >> sans le formalisme de l'enquête publique.
+
 			 	Cependant prête le flan à la critique du détournement de pouvoir si la modification est trop ciblée, ou, à l'inverse, si la modification est trop large à vous rapprocher du cas de la modification de droit commun.
-			 	
+
 			 	On observe souvent un (24:30)
-			 	
+
 			 	Souvent 3 ou 4 mois pour faire une modification simplifiée.
-			 	
-			 	Très intéressant pour tout ce qui ne rentre pas dans le champ de la modification classique. Ex. : réduire les ratios de stationnement. 
-		 	
+
+			 	Très intéressant pour tout ce qui ne rentre pas dans le champ de la modification classique. Ex. : réduire les ratios de stationnement.
+
 		 	\subsubsection{Procédure de mise en compatibilité} L 153-49
-		 	
+
 		 		\paragraph{Déclaration de projet}
-		 		
+
 		 		Le véritable intérêt résulte de la pratique. C'est l'adaptation à un projet.
-		 		
-		 		Le temps d'élaboration est de 6 à 7 mois 
-		 		
+
+		 		Le temps d'élaboration est de 6 à 7 mois
+
 		 		Très souvent consiste en un secteur de plan masse\footnote{
 		 			article R 151-40 « Dans les zones U, AU,
 		 			dans les secteurs de taille et de capacité d'accueil limitées délimités en application de
 		 			l'article L. 151-13, ainsi que dans les zones où un transfert des possibilités de construction a
 		 			été décidé en application de l'article L. 151-25, le règlement peut définir des secteurs de plan
 		 			masse côté en trois dimensions »
-		 		
+
 			 		Le plan de masse fixe les volumes constructibles en déterminant a minima les règles
 			 		d’implantation, d’emprise et de hauteur. Il doit faire apparaître avec suffisamment de
 			 		précision l’implantation des constructions projetées
 			 		, sans avoir pour autant à préciser leur
 			 		localisation exacte.
 		 		}.
-			
+
 	\subsection{Les certificats d'Urbanise (CU)}
-	
+
 \section{Les cartes communales}
 
 \section{L'impact du droit de l'environnement}
-	
+
 	\subsection{L'enquête publique (PLU et certains PC)}
-	
+
 	\subsection{Étude d'impact et évaluation environnementale}
-	
+
 	\subsection{Les mesures favorables aux énergies renouvelables}
