--- a/03_amenagement.tex
+++ b/03_amenagement.tex
@@ -1,3 +1,4 @@
+% !TeX root = droitUrbanisme.tex
 \chapter{L'aménagement}
 
 L 300-1 \& L 300-2
@@ -53,7 +54,7 @@ L 300-1 \& L 300-2
 
 	Le concessionnaire assure , il en est raisonnable. Il assure en amont les étude. Et il a une mission particulière grâce à l'expro : il peut .
 
-	Le \CU organise très complètement le rôle.
+	Le \cu organise très complètement le rôle.
 
 	\begin{itemize}
 		\item \articlesCodifiesS{R}{300-4} concession pour lesquels le risque financier prépondérant
@@ -186,116 +187,116 @@ L 300-1 \& L 300-2
 			\item Modalités prévisionnelles de financement
 			\item Programme des équipements publics
 		\end{enumerate}
-		
+
 		\begin{quote}
 			\articleCU{R}{311-7}
 			<< {\itshape La personne publique qui a pris l'initiative de la création de la zone constitue un dossier de réalisation approuvé, sauf lorsqu'il s'agit de l'État, par son organe délibérant. Le dossier de réalisation comprend :
-				
+
 				a) Le projet de programme des équipements publics à réaliser dans la zone ; lorsque celui-ci comporte des équipements dont la maîtrise d'ouvrage et le financement incombent normalement à d'autres collectivités ou établissements publics, le dossier doit comprendre les pièces faisant état de l'accord de ces personnes publiques sur le principe de la réalisation de ces équipements, les modalités de leur incorporation dans leur patrimoine et, le cas échéant, sur leur participation au financement ;
-				
+
 				\lips
-				
+
 %				b) Le projet de programme global des constructions à réaliser dans la zone ;
-%				
+%
 %				c) Les modalités prévisionnelles de financement de l'opération d'aménagement, échelonnées dans le temps.
-%				
+%
 %				Le dossier de réalisation complète en tant que de besoin le contenu de l'étude d'impact mentionnée à l'article R. 311-2 ou le cas échéant la ou les parties de l'évaluation environnementale du plan local d'urbanisme portant sur le projet de zone d'aménagement concerté, conformément au III de l'article L. 122-1-1 du code de l'environnement notamment en ce qui concerne les éléments qui ne pouvaient être connus au moment de la constitution du dossier de création.
-%				
+%
 %				L'étude d'impact mentionnée à l'article R. 311-2 ou le cas échéant la ou les parties de l'évaluation environnementale du plan local d'urbanisme portant sur le projet de zone d'aménagement concerté ainsi que les compléments éventuels prévus à l'alinéa précédent sont joints au dossier de toute enquête publique ou de toute mise à disposition du public concernant l'opération d'aménagement réalisée dans la zone.
 			} >>
 		\end{quote}
-		
-		Il ne peut être mis à la charge de l'aménageur ... 
-		
+
+		Il ne peut être mis à la charge de l'aménageur ...
+
 		Ce tableau peut vivre, mais à chaque fois il y a nécessité de modifier le dossier. Il y a donc nouvelle délibération pour entériner le dossier modifié.
-		
-		
-		
+
+
+
 		\subsubsection{Modalités prévisionnelles de financement}
-		
+
 			Le deuxième tableau renvoie aux modalités de financement.
-			
+
 			La quasi totalité des recettes proviennent de la vente.
-			
+
 			Les charges sont constituées :
 			\begin{itemize}
 				\item en premier lieu par les acquisitions foncières.
 				Les aménageurs utilisent souvent la technique de << l'escargot >>, consistant à acquérir et commercialiser les terrains l'un après l'autre,de manière à éviter d'acheter beaucoup de terrains.
-				
+
 				\item Les coût de réalisation des équipements publics.
-				
+
 				\item La viabilisation des terrains
-				
+
 				\item Garanties financières
-				
+
 				\item Frais de structure
-				
+
 				\item Frais commerciaux.
-				
+
 				\item Frais divers. Y compris le contentieux.
 			\end{itemize}
-		
+
 		\begin{quote}
 			\articleCU{L}{311-4}
 			<< \lips
-			
+
 			{\itshape Lorsqu'une construction est édifiée sur un terrain n'ayant pas fait l'objet d'une cession, location ou concession d'usage consentie par l'aménageur de la zone, une convention conclue entre la commune ou l'établissement public de coopération intercommunale compétent pour créer la zone d'aménagement concerté et le constructeur, signée par l'aménageur, précise les conditions dans lesquelles le constructeur participe au coût d'équipement de la zone. La convention constitue une pièce obligatoire du dossier de permis de construire ou de lotir.
-				
+
 				\medskip La participation aux coûts d'équipement de la zone peut être versée directement à l'aménageur ou à la personne publique qui a pris l'initiative de la création de la zone si la convention conclue avec le constructeur le prévoit.}
-			
+
 			\lips >>
 		\end{quote}
 		Que ce soit le propriétaire ou le constructeur qui va valoriser le terrain, qui doit mettre en place une convention de participation avec la ville.
-		
+
 		Il n'y a pas de quantum imposé. La pratique est de faire une règle de 3 le ... rapporté au coûts des équipements publics.
-		
+
 		Convention avec la collectivité locale, il faut donc une délibération du CM habilitant le signataire.
-		
-		Elle contient le montant, l'échéancier de paiement. 
-		
+
+		Elle contient le montant, l'échéancier de paiement.
+
 
 		\subsubsection{Programme d'équipement public}
 
 		\subsubsection{Programme global de construction}
 
 	\subsection{Commercialisation des terrains par l'aménageur}
-		
+
 		\begin{quote}
 			\textbf{\articleCU{L}{311-4}} :
-			<< 
+			<<
 			{\itshape Les cessions ou concessions d'usage de terrains à l'intérieur des zones d'aménagement concerté font l'objet d'un cahier des charges qui indique le nombre de mètres carrés de surface de plancher dont la construction est autorisée sur la parcelle cédée. Le cahier des charges peut en outre fixer des prescriptions techniques, urbanistiques et architecturales imposées pour la durée de la réalisation de la zone.
-				
+
 			\medskip Le maire ou le président de l'établissement public de coopération intercommunale, dans les cas où la création de la zone relève de la compétence du conseil municipal ou de l'organe délibérant de l'établissement public de coopération intercommunale, ou le représentant de l'Etat dans le département dans les autres cas, peut approuver le cahier des charges. Si le cahier des charges a été approuvé, et après qu'il a fait l'objet de mesures de publicité définies par décret, celles de ses dispositions qui sont mentionnées au premier alinéa sont opposables aux demandes d'autorisation d'urbanisme.
-			
+
 			\medskip Le cahier des charges devient caduc à la date de la suppression de la zone. Les dispositions du présent alinéa ne sont pas applicables aux cahiers des charges signés avant l'entrée en vigueur de la loi \no 2000-1208 du 13 décembre 2000 relative à la solidarité et au renouvellement urbains.} >>
 		\end{quote}
-		
+
 		Il faut en retenir qu'il y a deux cahiers des charges possibles :
 		\begin{itemize}
 			\item le premier, obligatoire, indique l'enveloppe de constructibilité cédée en terme de \sdp et ne constitue pas réellement un cahier des charges ;
 			\item le second, facultatif, permet de préciser tout ce qui n'est pas prévu à l'article 11 du PLU, les prescriptions techniques, urbanistiques et architecturales.
 		\end{itemize}
-	
+
 	On peut imaginer qu'il y ait des clauses qui sont étrangères à la question urbaines, mais dans ce cas elles n'ont d'effet que contractucel. Mais le cahier des charges ne peut être contraire au PLU. Il peut être plus contraignant, mais pas contraire. dans ce cas, le PLU prime.
-	
+
 	\paragraph{Modalité de validation} Relativement simple. Dans la majorité des cas un arrêté municipal approuve le cahier des charges. Pas de nécessité de passer en \CM
-	
+
 	\paragraph{Effet juridique} Double effet : contractuel et réglementaire.
-	
+
 	\begin{enumerate}
-		\item \textbf{Effet contractuel.} La question se pose pour le primo acquéreur. Elle se pose également pour les acquéreurs successifs. On peut se 
-	
+		\item \textbf{Effet contractuel.} La question se pose pour le primo acquéreur. Elle se pose également pour les acquéreurs successifs. On peut se
+
 		Si la ZAC est supprimée, la question ne se pose plus (enfin plutôt).
-		
+
 		Peu de jurisprudence.
-		
+
 		\item \textbf{effet réglementaire} Mêmes effets que les prescriptions d'un PLU. L'organisme instructeur doit exercer un double contrôle : d'une part le PLU, d'autre part le cahier des charges.
 	\end{enumerate}
-	
-	
+
+
 
 		\subsubsection{Cahier des charges obligatoire}
-		
+
 		Nullité relative en cas d'abscence
 
 		\subsubsection{Surface de plancher par parcelle}
@@ -308,11 +309,11 @@ Suppression de ZAc
 
 \begin{quote}
 	\textbf{\articleCU{L}{311-412}} :
-	<< 
+	<<
 	{\itshape La suppression d'une zone d'aménagement concerté est prononcée, sur proposition ou après avis de la personne publique qui pris l'initiative de sa création, par l'autorité compétente, en application de l'article L. 311-1, pour créer la zone. La proposition comprend un rapport de présentation qui expose les motifs de la suppression.
-		
+
 	\medskip La modification d'une zone d'aménagement concerté est prononcée dans les formes prescrites pour la création de la zone.
-	
+
 	\medskip La décision qui supprime la zone ou qui modifie son acte de création fait l'objet des mesures de publicité et d'information édictées par l'article R. 311-5.} >>
 \end{quote}
 
